--- a/MyTekkiDebloat.WinUI/MyTekkiDebloat.WinUI.csproj
+++ b/MyTekkiDebloat.WinUI/MyTekkiDebloat.WinUI.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="ReaLTaiizor" Version="3.8.1.3" />
+    <PackageReference Include="System.Management" Version="8.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
